# Chip-8

./: .gitignore  CMakeLists.txt  build  main  main.c  make  run
lib/: cpu.c  cpu.h  log.c  log.h
